# reminduck

./: .gitignore  README.md  io.github.elly_code.reminduck.flathub.yml  io.github.elly_code.reminduck.yml  meson.build  sqgipkg.json
.github/workflows/: CI.yml  release.yml
data/: meson.build  reminduck.desktop.in  reminduck.gresource.xml  reminduck.gschema.xml  reminduck.metainfo.xml.in
po/: LINGUAS  ca.po  de.po  es.po  fr.po  io.github.elly_code.reminduck.pot  it.po  nl.po  pt.po  ru.po  sv.po  tr.po  vi.po
po/extra/: LINGUAS  ca.po  de.po  fr.po  it.po  nl.po  tr.po
src/: Application.vala  MainWindow.vala  meson.build
src/Objects/: Quack.vala
src/Services/: Database.vala  Utils.vala
src/Views/: RemindersView.vala  SettingsView.vala  WelcomeView.vala
src/Widgets/: QuackBox.vala
windows/: deploy.sh
